Quartz sync: Oct 3, 2024, 10:36 AM

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "format": "npx prettier . --write",
     "test": "tsx ./quartz/util/path.test.ts && tsx ./quartz/depgraph.test.ts",
     "profile": "0x -D prof ./quartz/bootstrap-cli.mjs build --concurrency=1",
-    "deploy": "npx quartz sync"
+    "sync": "npx quartz sync"
   },
   "engines": {
     "npm": ">=9.3.1",
